--- a/src/scenes/Home/components/UserSummary/style.css
+++ b/src/scenes/Home/components/UserSummary/style.css
@@ -1,3 +1,7 @@
-.sidebar .img-thumbnail {
-    width: 200px;
+.sidebar {
+    padding: 0 2px 0px 2px;
+}
+
+.sidebar .avatar {
+    margin-bottom: 5px;
 }
