--- a/src/scenes/Home/components/UserSummary/style.css
+++ b/src/scenes/Home/components/UserSummary/style.css
@@ -1,7 +1,3 @@
-.sidebar {
-    padding: 0 2px 0px 2px;
-}
-
-.sidebar .avatar {
-    margin-bottom: 5px;
+.UserSummary .desc span {
+    margin-left:10px;
 }
