--- a/src/scenes/Home/style.css
+++ b/src/scenes/Home/style.css
@@ -1,7 +1,12 @@
 .sidebar {
-    border-right: solid black 1px;
-    position: -webkit-sticky;
-    position: sticky;
-    z-index: 1000;
-    height: calc(100vh - 40px);
+    padding-bottom: 30px;
+}
+@media (min-width: 576px) {
+    .sidebar {
+        border-right: solid black 1px;
+        position: -webkit-sticky;
+        position: sticky;
+        z-index: 1000;
+        height: calc(100vh - 40px);
+    }
 }
